--- a/02_week/post-two.html
+++ b/02_week/post-two.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Sacramento&display=swap"
+        rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="page-header">
             <a href="./home.html" id="logo">My Blog</a>
-            <form id="home-button" action="./home.html">
-                <input  type="submit" value="Home">
-            </form>
-            <form id="contact-button" action="./contact.html">
-                <input type="submit" value="Contact">
-            </form>
+            <a id="home-button" href="./home.html">Home</a>
+            <a id="contact-button" href="./contact.html">Contact</a>
         </div>
     </header>
 </body>
