--- a/02_week/post-one.html
+++ b/02_week/post-one.html
@@ -20,5 +20,8 @@
             <a id="contact-button" href="./contact.html">Contact</a>
         </div>
     </header>
+    <footer>
+        <div class="page-footer"></div>
+    </footer>
 </body>
 </html>
