Add contact page

--- a/02_week/contact.html
+++ b/02_week/contact.html
@@ -20,6 +20,22 @@
             <a id="contact-button" href="./contact.html">Contact</a>
         </div>
     </header>
+    <h1 id="contact-title">Contact Page</h1>
+    <form id="contact-form" action="">
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname" placeholder="Nume">
+        <br>
+        <label for="lname">E-mail:</label><br>
+        <input type="text" id="lname" name="lname" placeholder="E-mail">
+        <br>
+        <br>
+        <label for="contact-description">Additional Information:</label><br>
+        <textarea name="contact-description" id="" cols="80" rows="13"></textarea>
+        <br>
+        <br>
+        <input id="submit-button" type="submit" value="Trimite">
+        
+    </form>
     <footer>
         <div class="page-footer"></div>
     </footer>
