--- a/05_week/index.html
+++ b/05_week/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Comment Section</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+        <input type="text" placeholder="User input" id="comment-input">
+        <input type="submit" value="Add" id="submit-button">
+        </div>
+    </div>
+    <script src="./app.js"></script>
 </body>
 </html>
