Replace ul and li with a div element

--- a/05_week/index.html
+++ b/05_week/index.html
@@ -10,8 +10,11 @@
 <body>
     <div class="container">
         <div class="header">
-        <input type="text" placeholder="User input" id="comment-input">
+        <input type="text" placeholder="Insert your comment here" id="comment-input">
         <input type="submit" value="Add" id="submit-button">
+        </div>
+        <div id="comments">
+
         </div>
     </div>
     <script src="./app.js"></script>
