--- a/05_week/index.html
+++ b/05_week/index.html
@@ -6,15 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comment Section</title>
     <link rel="stylesheet" href="./styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Sacramento&display=swap"
+        rel="stylesheet">
 </head>
 <body>
+    <button id="goTopButton"><i class="material-icons">arrow_upward</i></button>
     <div class="container">
         <div class="header">
         <input type="text" placeholder="Insert your comment here" id="comment-input">
         <input type="submit" value="Add" id="submit-button">
         </div>
         <div id="comments">
-
         </div>
     </div>
     <script src="./app.js"></script>
