Add style, change html structure

--- a/05_week_optional/index.html
+++ b/05_week_optional/index.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI calculator</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <h1>Pepe BMI calculator</h1>
+        </header>
+        <div id="bmi-view">
+            <input type="text" placeholder="Introduce your weight" class="input-item" id="weight-input">
+            <input type="text" placeholder="Introduce your height" class="input-item"  id="height-input">
+            <input type="submit" value="Submit" class="input-item"  id="submit-button" />
+        </div>
+        <div id="main-window">
+            
+        </div>
+        <footer>
+
+        </footer>
+    </div>
+    <script src="./app.js"></script>
 </body>
 </html>
