--- a/05_week_optional/index.html
+++ b/05_week_optional/index.html
@@ -40,9 +40,11 @@
           id="submit-button"
         />
       </div>
-      <div id="main-window"></div>
-      <footer></footer>
-    </div>
+      <div id="main-window">
+          
+      </div>
+    </div>      
+
     <script src="./app.js"></script>
   </body>
 </html>
