Add starting files

--- a/05_week_optional/index.html
+++ b/05_week_optional/index.html
@@ -40,10 +40,8 @@
           id="submit-button"
         />
       </div>
-      <div id="main-window">
-          
-      </div>
-    </div>      
+      <div id="main-window"></div>
+    </div>
 
     <script src="./app.js"></script>
   </body>
