Fix bug , get another one more

--- a/06_week/index.html
+++ b/06_week/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="game-container">
-        <div id="player"></div>
+        <div id="player" style="top: 0; left:0; right: 0; bottom: 0;"></div>
     </div>
     <script src="./game.js"></script>
 </body>
