--- a/06_week/index.html
+++ b/06_week/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="game-container">
-        <div id="player" style="top: 0; left:0; right: 0; bottom: 0;"></div>
+    <div id="game-container">
+        <div id="player"></div>
     </div>
     <script src="./game.js"></script>
 </body>
