--- a/06_week/index.html
+++ b/06_week/index.html
@@ -8,9 +8,18 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div id="game-container">
-        <div id="player"></div>
-    </div>
+    <input
+    type="text"
+    placeholder="Introduce your nickname"
+    class="input-item"
+    autocomplete="off"
+  />
+  <input
+    type="submit"
+    value="Submit"
+    class="input-item"
+    id="submit-button"
+  />
     <script src="./game.js"></script>
 </body>
 </html>
