--- a/06_week/index.html
+++ b/06_week/index.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
     <input
-    type="text"
-    placeholder="Introduce your nickname"
-    class="input-item"
-    autocomplete="off"
-  />
-  <input
-    type="submit"
-    value="Submit"
-    class="input-item"
-    id="submit-button"
-  />
+      type="text"
+      placeholder="Introduce your nickname"
+      class="input-item"
+      autocomplete="off"
+    />
+    <input type="submit" value="Submit" class="input-item" id="submit-button" />
     <script src="./game.js"></script>
-</body>
+  </body>
 </html>
