Add player model and obstacles textures

--- a/06_week/index.html
+++ b/06_week/index.html
@@ -6,15 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   </head>
   <body>
-    <input
-      type="text"
-      placeholder="Introduce your nickname"
-      class="input-item"
-      autocomplete="off"
-    />
-    <input type="submit" value="Submit" class="input-item" id="submit-button" />
+    <h1>The Most Wonderful Game</h1>
     <script src="./game.js"></script>
   </body>
 </html>
