--- a/06_week_optional/index.html
+++ b/06_week_optional/index.html
@@ -14,7 +14,9 @@
   </head>
   <body>
     <h1>The Most Wonderful Game</h1>
-    <div id="player-stat"> <i class="fa-solid fa-heart fa-2xl"></i> <i class="fa-solid fa-heart fa-2xl"></i> <i class="fa-solid fa-heart fa-2xl"></i></div>
+    <div id="player-stat"> <i class="fa-solid fa-heart fa-2xl"></i> <i class="fa-solid fa-heart fa-2xl"></i> <i class="fa-solid fa-heart fa-2xl"></i>
+    <button id="restart-button">Restart</button>
+  </div>
     <script src="./game.js"></script>
   </body>
 </html>
