Fix obstacle positioning bug, general improves

--- a/06_week/index.html
+++ b/06_week/index.html
@@ -10,9 +10,13 @@
       href="https://fonts.googleapis.com/css?family=Press+Start+2P"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/dcd97259df.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <h1>The Most Wonderful Game</h1>
+    <div id="player-stat"> <i class="fa-solid fa-heart fa-2xl"></i> <i class="fa-solid fa-heart fa-2xl"></i> <i class="fa-solid fa-heart fa-2xl"></i>
+    <button id="restart-button">Restart</button>
+  </div>
     <script src="./game.js"></script>
   </body>
 </html>
