--- a/07_week/index.html
+++ b/07_week/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Digital Timer</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
-    <div class="timer">
-        <span id="hours">00</span> :
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="timer">
+        <span id="hours">00</span> : 
         <span id="minutes">00</span> :
         <span id="seconds">00</span>
-        <div class="timer-buttons">
+      </div>
+      <div class="timer-buttons">
         <button id="start-button" onclick="startTimer()">Start</button>
         <button id="stop-button" onclick="stopTimer()">Stop</button>
         <button id="reset-button" onclick="resetTimer()">Reset</button>
         <button id="save-button" onclick="saveTimer()">Save</button>
-    </div>
+      </div>
     </div>
     <script src="./app.js"></script>
-</body>
+  </body>
 </html>
