--- a/07_week/index.html
+++ b/07_week/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="container">
       <div class="timer">
-        <span id="hours">00</span> : 
-        <span id="minutes">00</span> :
+        <span id="hours">00</span> <span>:</span>
+        <span id="minutes">00</span> <span>:</span>
         <span id="seconds">00</span>
       </div>
       <div class="timer-buttons">
