--- a/07_week/index.html
+++ b/07_week/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="container">
+    <section>
+      <div class="shadow"></div>
+      <div class="bowl">
+        <div class="liquid">
+        </div>
+      </div>
       <div class="timer">
         <span id="hours">00</span> <span>:</span>
         <span id="minutes">00</span> <span>:</span>
@@ -20,7 +25,7 @@
         <button id="reset-button" onclick="resetTimer()">Reset</button>
         <button id="save-button" onclick="saveTimer()">Save</button>
       </div>
-    </div>
+    </section>
     <script src="./app.js"></script>
   </body>
 </html>
