--- a/07_week/index.html
+++ b/07_week/index.html
@@ -11,12 +11,11 @@
     <section>
       <div class="shadow"></div>
       <div class="bowl">
-        <div class="liquid">
-        </div>
+        <div class="liquid"></div>
       </div>
       <div class="timer">
-        <span id="hours">00</span> <span>:</span>
-        <span id="minutes">00</span> <span>:</span>
+        <span id="hours">00</span> <span>:</span> <span id="minutes">00</span>
+        <span>:</span>
         <span id="seconds">00</span>
       </div>
       <div class="timer-buttons">
