--- a/08_week/index.html
+++ b/08_week/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Todo app</title>
-</head>
-<body>
-  
-  <input id="todo-input" />
-  <button id="todo-button"> Add </button>
-  <script type="module" src="./app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Todo app</title>
+  </head>
+  <body>
+    <input id="todo-input" />
+    <button id="todo-button">Add</button>
+    <script type="module" src="./app.js"></script>
+  </body>
 </html>
