--- a/07_week_optional/index.html
+++ b/07_week_optional/index.html
@@ -13,7 +13,12 @@
     <div id="player-window"></div>
     <div id="game-result"></div>
     <div id="computer-window"></div>
+    <div id="player-choice">
+        <img src="./images/rock.jpg" alt="rock" id="rock">
+        <img src="./images/paper.jpg" alt="paper" id="paper">
+        <img src="./images/scissors.jpg" alt="scissors" id="scissors">
     </div>
-    <script src="./app.js"></script>
+    </div>
+    <script type="module" src="./app.js"></script>
 </body>
 </html>
