--- a/07_week_optional/index.html
+++ b/07_week_optional/index.html
@@ -10,14 +10,14 @@
 <body>
     <h1>Rock Paper Scissors</h1>
     <div id="game-window">
-    <div id="player-window"></div>
+    <div id="player-window"><h2>Player Choice</h2></div>
     <div id="game-result"></div>
-    <div id="computer-window"></div>
-    <div id="player-choice">
-        <img src="./images/rock.jpg" alt="rock" id="rock">
-        <img src="./images/paper.jpg" alt="paper" id="paper">
-        <img src="./images/scissors.jpg" alt="scissors" id="scissors">
+    <div id="computer-window"><h2>Computer Choice</h2></div>
     </div>
+    <div id="player-choice">
+        <img src="./images/rock.jpg" alt="rock" id="rock" class="item">
+        <img src="./images/paper.jpg" alt="paper" id="paper" class="item">
+        <img src="./images/scissors.jpg" alt="scissors" id="scissors" class="item">
     </div>
     <script type="module" src="./app.js"></script>
 </body>
