--- a/07_week_optional/index.html
+++ b/07_week_optional/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
     <h1>Rock Paper Scissors</h1>
     <div id="game-window">
-    <div id="player-window"><h2>Player Choice</h2></div>
-    <div id="game-result"></div>
-    <div id="computer-window"><h2>Computer Choice</h2></div>
+      <div id="player-window"><h2>Player Choice</h2></div>
+      <div id="game-result"></div>
+      <div id="computer-window"><h2>Computer Choice</h2></div>
     </div>
     <div id="player-choice">
-        <img src="./images/rock.jpg" alt="rock" id="rock" class="item">
-        <img src="./images/paper.jpg" alt="paper" id="paper" class="item">
-        <img src="./images/scissors.jpg" alt="scissors" id="scissors" class="item">
+      <img src="./images/rock.jpg" alt="rock" id="rock" class="item" />
+      <img src="./images/paper.jpg" alt="paper" id="paper" class="item" />
+      <img
+        src="./images/scissors.jpg"
+        alt="scissors"
+        id="scissors"
+        class="item"
+      />
     </div>
     <script type="module" src="./app.js"></script>
-</body>
+  </body>
 </html>
