--- a/07_week_optional/index.html
+++ b/07_week_optional/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <div id="page-title">
     <h1>Rock Paper Scissors</h1>
+    </div>
     <div id="game-window">
       <div id="player-window"><h2>Player Choice</h2></div>
       <div id="game-result"></div>
