--- a/11_week/index.html
+++ b/11_week/index.html
@@ -1,13 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./styles.css">
-  <link
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <link
       href="https://fonts.googleapis.com/css?family=Press+Start+2P"
       rel="stylesheet"
     />
@@ -15,8 +14,8 @@
       src="https://kit.fontawesome.com/dcd97259df.js"
       crossorigin="anonymous"
     ></script>
-</head>
-<body>
+  </head>
+  <body>
     <h1>The Most Wonderful Game</h1>
     <div id="player-stat">
       <i class="fa-solid fa-heart fa-2xl"></i>
@@ -24,8 +23,7 @@
       <i class="fa-solid fa-heart fa-2xl"></i>
       <button id="restart-button">Restart</button>
     </div>
-  <div id="game-container">
-  </div>
-  <script type="module" src="./app.js"></script>
-</body>
+    <div id="game-container"></div>
+    <script type="module" src="./app.js"></script>
+  </body>
 </html>
